fix: 초기데이터 추가 안되는 오류 수정